# egui-minesweep-rs

./: Cargo.toml  README.md  setup_web.sh  start_web.sh
src/: app.rs  lib.rs  main.rs  minefield.rs
webapp/: index.html  minesweep_rs.js  minesweep_rs_bg.wasm
