[package]
name = "minesweep-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0"}
egui_extras = { version = "0.19.0"}

rand = { version = "0.8.5"}
timer = { version = "0.2.0"}
chrono = { version = "0.4.22"}
