[package]
name = "minesweep-rs"
version = "0.1.0"
edition = "2021"
authors = ["Bogdan Olar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.19.0", features = ["persistence"]}
egui_extras = { version = "0.19.0"}
serde = { version = "1.0.145", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

#
# Desktop app dependencies
#

# Needed for `rand` support for wasm target https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom = { version = "0.2.7", features = ["js"] }
rand = { version = "0.8.5", features = ["getrandom"] }
timer = { version = "0.2.0"}
chrono = { version = "0.4.22"}

# Enable building both native and wasm
[lib]
crate-type = ["cdylib", "rlib"]

#
# Web app dependencies
#

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.4"
tracing-wasm = "0.2.1"
